--- a/module1/HOA1-3.html
+++ b/module1/HOA1-3.html
@@ -2,41 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Official webpage of Harmony Heights, featuring our latest music, tour dates, and exclusive content for our fans.">
-    <title>Harmony Heights: Feel the Music</title>
+    <meta name="description" content="Fanpage for Dethklok">
+    <title>Dethklok</title>
 </head>
 <body>
 
-<h1>Welcome to Harmony Heights</h1>
-<p>We are Harmony Heights, a band that blends genres to create unique sounds. Our journey through music has been incredible, and we're excited to share it with you.</p>
-<img src="https://edube.org/uploads/media/default/0001/04/band-photo.jpg" alt="Harmony Heights Band Photo">
-<img src="https://edube.org/uploads/media/default/0001/04/member1-amy.jpg" alt="Harmony Heights Vocals/Sampling: Amy Duncan">
-<img src="https://edube.org/uploads/media/default/0001/04/member2-john.jpg" alt="Harmony Heights Bass/Guitars: John Smith">
-<img src="https://edube.org/uploads/media/default/0001/04/member3-trevor.jpg" alt="Harmony Heights Drums: Trevor G.">
+<h1>Metalocalypse presents: Dethklok</h1>
+<p>We are Dethklok, the world's most brutal and influential extreme metal band, forged in chaos and feared for our music's unmatched power.</p>
+<img src="https://www.premierguitar.com/media-library/dethklok-left-to-right-skwisgaar-skwigelf-william-murderface-nathan-explosion-toki-wartooth-pickles.jpg?id=48585513&width=1245&height=700&quality=70&coordinates=0%2C2%2C0%2C0" alt="Dethklok Band Photo">
+<img src="https://i.pinimg.com/736x/ea/14/2c/ea142ccb28ffc10d9e638640aa572867.jpg" alt="Dethklok Lead Vocals:Nathan Explosion">
+<p><strong>Lead Vocals: Nathan Explosion</strong></p>
+<img src="https://i.ytimg.com/vi/jPhDVwmkDfo/sddefault.jpg" alt="Dethklok Lead guitar:Skwisgaar">
+<p><strong>Lead Guitar: Skwisgaar Skwigelf</strong></p>
+<img src="https://comicvine.gamespot.com/a/uploads/scale_medium/3/34588/878623-ep202.jpg" alt="Dethklok Rhythm Guitar:Toki.">
+<p><strong>Rhythm Gutiar: Toki Wartooth</strong></p>
+<img src="https://lastfm.freetls.fastly.net/i/u/ar0/f1318646e01b4a3aac6b49cff861e0db.jpg" alt="Dethklok bassist:Bill">
+<p><strong>Bassist: William Murderface</strong></p>
+<img src="https://i.pinimg.com/736x/72/50/05/7250055e294849c39ccb1fef06b96c4d.jpg" alt="Dethklok drummer:Pickles">
+<p><strong>Drummer: Pickles the Drummer</strong></p>
 
 <h2>Listen to Our Latest Tracks</h2>
-<audio controls>
-    <source src="https://edube.org/uploads/media/default/0001/04/track1.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-</audio>
-
-<h2>Watch Our Performances</h2>
-<video controls>
-    <source src="https://edube.org/uploads/media/default/0001/04/performance1.mp4" type="video/mp4">
-    Your browser does not support the video element.
-</video>
+<a href="https://open.spotify.com/album/6YVSzU89AisNDfVK4HUt69?si=F6ne4cJiRHy1lubKbtqZog">The Dethalbum</a>
 
 <h2>Upcoming Tour Dates</h2>
 <ul>
-    <li>March 12, 2029, Orlando, FL - <a href="https://example.com/purchase-tickets-harmony-heights-orlando" target="_blank">Get Tickets</a></li>
-    <li>March 14, 2029, Salt Lake City, UT - <a href="https://example.com/purchase-tickets-harmony-heights-slc" target="_blank">Get Tickets</a></li>
+    <li>February 30, 2026, TIP QC - <a href="https://dethkloklive.com/" target="_blank">Get Tickets</a></li>
+    <li>February 31, 2026, TIP Manila - <a href="https://dethkloklive.com/" target="_blank">Get Tickets</a></li>
 </ul>
 
 <h2>Follow Us</h2>
 <p>Stay updated with our latest news and releases:</p>
-<a href="https://www.example.com/faceblock/hh">Faceblock</a><br>
-<a href="https://www.example.com/instagrump/hh">Instagrump</a><br>
-<a href="https://www.example.com/twotter/hh">Twotter</a>
+<a href="https://dethkloklive.com/">For updates and more news for tours and stuff</a><br>
+
 
 <h2>Contact Us</h2>
 <form>
